> Finished Navigation Bar > Setup React-Router files and routing > Setup page components > Setup React-Router-Bootstrap
Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/general-components/NavigationBar.css
+++ b/src/components/general-components/NavigationBar.css
@@ -1,23 +1,23 @@
 .navBar {
-  margin-top: 0.85%;
-  margin-bottom: 0.6%;
-  margin-left: 13.9%;
-  margin-right: 14.6%;
+  margin: 0.5% 15% 0.5% 15%;
 }
 
-.navbar .nav-link {
-  /* color: #79158f !important; */
-  color: white !important;
+.nav-link {
+  display: flex;
+  color: #79158f !important;
+  /* color: white !important; */
   font-weight: 500;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (min-width: 992px) {
-  .navbar .nav-link {
-    margin-left: 18px !important;
+  .nav-link {
+    margin-left: 20px !important;
   }
   .highlightNav {
-    /* border: 2px solid #79158f; */
-    border: 2px solid white;
+    border: 2px solid #79158f;
+    /* border: 2px solid white; */
     padding: 10px 40px 10px 40px !important;
   }
 }
