--- a/src/components/homepage-components/PageHeader.css
+++ b/src/components/homepage-components/PageHeader.css
@@ -1,5 +1,4 @@
 .pageHeader {
-  max-height: 100%;
   background-image: linear-gradient(
     rgba(211, 173, 194, 1),
     rgba(211, 173, 194, 1)
@@ -13,15 +12,17 @@
 .pageHeader img {
   margin-left: auto;
   margin-right: auto;
-  max-width: 100%;
-  width: 78%;
+  width: 75%;
   height: auto;
 }
 
 .pageHeader-text {
+  display: block;
   text-align: left;
+  margin: 0;
   color: white;
-  transform: translate(16%, -150%);
+  overflow-wrap: break-word;
+  transform: translate(28%, -145%);
 }
 
 #headerTitle {
@@ -29,7 +30,7 @@
 }
 
 #headerDesc {
-  margin-top: 1%;
+  margin-top: 2%;
   font-size: 1.4vw;
   font-weight: 200;
 }
@@ -40,4 +41,8 @@
   padding: 20px 75px 20px 75px;
   font-size: 1vw;
   font-weight: 600;
+}
+
+.break-word {
+  word-wrap: break-word;
 }
