--- a/src/components/homepage-components/PageHeader.css
+++ b/src/components/homepage-components/PageHeader.css
@@ -4,24 +4,21 @@
     rgba(211, 173, 194, 1)
   );
   text-align: center;
-  display: inline-block;
+  position: relative;
   margin: auto;
   top: 0;
 }
 
 .pageHeader img {
-  margin-left: auto;
-  margin-right: auto;
   width: 75%;
   height: auto;
 }
 
 .pageHeader-text {
-  display: block;
   text-align: left;
   margin: 0;
   color: white;
-  overflow-wrap: break-word;
+  position: absolute;
   transform: translate(28%, -145%);
 }
 
