> Added The Font > Added Logo and Changed The Name > Starting The Footer
Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/homepage-components/MessageOfTheDay.css
+++ b/src/components/homepage-components/MessageOfTheDay.css
@@ -2,5 +2,6 @@
     text-align: center;
     padding-top: 50px;
     color: #79158f;
-    font-size: 1.4vw;
+    font-size: 1.7em;
+    font-family: "AvenirLTStd-Book";
 }
