--- a/src/components/general-components/NavigationBar.css
+++ b/src/components/general-components/NavigationBar.css
@@ -1,5 +1,6 @@
 .navBar {
   margin: 0.5% 15% 0.5% 15%;
+  font-family: "AvenirLTPro-Heavy";
 }
 
 .nav-link {
@@ -9,11 +10,12 @@
   font-weight: 500;
   justify-content: center;
   align-items: center;
+  font-size: 1em;
 }
 
 @media screen and (min-width: 992px) {
   .nav-link {
-    margin-left: 20px !important;
+    margin-left: 16px !important;
   }
   .highlightNav {
     border: 2px solid #79158f;
