--- a/src/components/general-components/Footer.css
+++ b/src/components/general-components/Footer.css
@@ -1,4 +1,16 @@
 .footerStyle {
   margin: 0.5% 15% 0.5% 15%;
+  font-family: "AvenirLTPro-Heavy";
+  font-size: 1em;
 }
 
+.iconStyles {
+    float: right;
+
+}
+
+@media screen and (min-width: 992px) {
+    .footerStyle .nav-link  {
+      margin-left: 16px !important;
+    }
+}
