--- a/src/components/general-components/NavigationBar.css
+++ b/src/components/general-components/NavigationBar.css
@@ -3,18 +3,18 @@
   font-family: "AvenirLTPro-Heavy";
 }
 
-.nav-link {
+.navBar-links .nav-link {
   display: flex;
   color: #79158f !important;
   /* color: white !important; */
-  font-weight: 500;
   justify-content: center;
   align-items: center;
+  font-weight: 500;
   font-size: 1em;
 }
 
 @media screen and (min-width: 992px) {
-  .nav-link {
+  .navBar-links .nav-link  {
     margin-left: 16px !important;
   }
   .highlightNav {
