--- a/src/components/homepage-components/MessageOfTheDay.css
+++ b/src/components/homepage-components/MessageOfTheDay.css
@@ -1,9 +1,9 @@
 .motdStyle {
   text-align: center;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   margin: 0;
   color: #79158f;
-  font-size: 1.7em;
+  font-size: 1.5vw;
   font-family: "AvenirLTStd-Book";
 }
