> Setup Components: Terms and Condition Page, Register Page (User and Practitioner). Contact Us Page > Halfway through SearchForm > Added search icon asset
Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/general-components/NavigationBar.css
+++ b/src/components/general-components/NavigationBar.css
@@ -5,7 +5,7 @@
 
 .navBar-links .nav-link {
   display: flex;
-  color: #79158f !important;
+  color: #79158F !important;
   /* color: white !important; */
   justify-content: center;
   align-items: center;
@@ -18,7 +18,7 @@
     margin-left: 16px !important;
   }
   .highlightNav {
-    border: 2px solid #79158f;
+    border: 2px solid #79158F;
     /* border: 2px solid white; */
     padding: 10px 40px 10px 40px !important;
   }
