--- a/src/components/homepage-components/MessageOfTheDay.css
+++ b/src/components/homepage-components/MessageOfTheDay.css
@@ -3,8 +3,7 @@
   padding-top: 75px;
   padding-bottom: 75px;
   margin: 0;
-  color: #79158f;
+  color: #79158F;
   font-size: 1.5vw;
   font-family: "AvenirLTStd-Book";
 }
-
