--- a/src/components/homepage-components/PageHeader.css
+++ b/src/components/homepage-components/PageHeader.css
@@ -37,7 +37,7 @@
 
 #headerButton {
   margin-top: 2%;
-  background-color: #79158f;
+  background-color: #79158F;
   padding: 20px 75px 20px 75px;
   font-size: 1vw;
   font-weight: 500;
