--- a/src/components/practitioner-components/NewPractitionerCard.css
+++ b/src/components/practitioner-components/NewPractitionerCard.css
@@ -1,4 +1,4 @@
-.practitionerCardStyle {
+.newPracCardStyle {
   margin: 0.5% 15% 0.5% 15%;
   font-size: 1em;
   font-family: "AvenirLTStd-Book";
@@ -6,24 +6,24 @@
   display: inline-block;
 }
 
-.practitionerCardStyle .card-title {
-  color: #79158f !important;
+.newPracCardStyle .card-title {
+  color: #79158F !important;
   font-size: 1.3vw;
   font-family: "AvenirLTPro-Heavy";
 }
 
-.practitionerCardStyle .card-subtitle {
+.newPracCardStyle .card-subtitle {
   color: gray !important;
   font-size: 0.9vw;
   margin-bottom: 15px !important;
 }
 
-.practitionerCardStyle .card-text {
+.newPracCardStyle .card-text {
   color: gray !important;
   font-size: 0.8vw;
 }
 
-.practitionerCardStyle:before {
+.newPracCardStyle:before {
   content: "";
   width: 100%;
   height: 100%;
@@ -36,13 +36,14 @@
 .card-img-overlay {
   right: 0;
   padding: 0;
+  top: 50%;
+  position: absolute;
 }
 
-#practitionerCardType {
+#newPracCardType {
   color: white;
-  background-color: #79158f;
+  background-color: #79158F;
   padding: 5px 15px 5px 15px;
   font-size: 0.8vw;
   height: 0;
-  top: 47%;
 }
