--- a/src/components/practitioner-components/NewPractitionerList.css
+++ b/src/components/practitioner-components/NewPractitionerList.css
@@ -1,10 +1,10 @@
-.practitionerContainerStyle {
+.newPracContainerStyle {
   padding-top: 4%;
   padding-bottom: 4%;
   background-color: lavender;
 }
 
-.practitionerListStyle h4 {
+.newPracListStyle h4 {
   margin-bottom: 4%;
   font-family: "AvenirLTPro-Heavy";
   font-size: 1.3vw;
