> Search Form component almost done > Fixed Navbar and Margin Issues in the Homepage > Improvements on Several Components > Setup the Call To Action components to other pages
Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/general-components/NavigationBar.css
+++ b/src/components/general-components/NavigationBar.css
@@ -1,6 +1,7 @@
 .navBar {
-  margin: 0.5% 15% 0.5% 15%;
+  padding: 1% 15% 1% 15%;
   font-family: "AvenirLTPro-Heavy";
+  background-color: white;
 }
 
 .navBar-links .nav-link {
