--- a/src/components/homepage-components/CallToAction.css
+++ b/src/components/homepage-components/CallToAction.css
@@ -18,7 +18,7 @@
   margin: 0;
   color: white;
   position: absolute;
-  transform: translate(28%, -145%);
+  transform: translate(30%, -135%);
 }
 
 #ctaTitle {
@@ -28,14 +28,14 @@
 }
 
 #ctaDesc {
-  margin-top: 1%;
+  margin-top: 2%;
   font-size: 1vw;
   font-weight: 200;
 }
 
 #ctaButton {
   margin-top: 2%;
-  background-color: #79158f;
+  background-color: #79158F;
   padding: 20px 75px 20px 75px;
   font-size: 1vw;
   font-weight: 500;
@@ -46,7 +46,7 @@
   padding-top: 100px;
   padding-bottom: 100px;
   margin: 0;
-  color: #79158f;
+  color: #79158F;
   font-size: 1.3em;
   font-family: "AvenirLTPro-Heavy";
 }
@@ -70,6 +70,6 @@
 }
 
 #ctaSearchFormSubmit:hover {
-  border: 1px solid #79158f;
+  border: 1px solid #79158F;
   background-color: lavender;
 }
