--- a/src/components/homepage-components/MessageOfTheDay.css
+++ b/src/components/homepage-components/MessageOfTheDay.css
@@ -1,10 +1,9 @@
 .motdStyle {
   text-align: center;
-  padding-top: 75px;
-  padding-bottom: 75px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   margin: 0;
-  color: #79158f;
+  color: #79158F;
   font-size: 1.5vw;
   font-family: "AvenirLTStd-Book";
 }
-
