--- a/src/components/aboutpage-components/ClientSection.css
+++ b/src/components/aboutpage-components/ClientSection.css
@@ -1,50 +1,54 @@
 #lightHeader {
-    font-family: "AvenirLTStd-Book";
-    color: #79158f;
-    text-align: center;
-    font-size: 21px;
-    padding-left: 350px;
-    padding-right: 350px;
-    padding-bottom: 30px;
-  }
+  font-family: "AvenirLTStd-Book";
+  color: #79158f;
+  text-align: center;
+  font-size: 21px;
+  padding-left: 350px;
+  padding-right: 350px;
+  padding-bottom: 30px;
+}
 
- 
+#heavyHeader {
+  font-family: "AvenirLTPro-Heavy";
+  color: #79158f;
+  text-align: center;
+  margin-top: 50px;
+  font-size: 22px;
+}
 
-  #heavyHeader {
-    font-family: "AvenirLTPro-Heavy";
-    color: #79158f;
-    text-align: center;
-    margin-top: 50px;
-    font-size: 22px;
-  }
+#big-description {
+  font-family: "AvenirLTStd-Book";
+  font-size: 23px;
+  text-align: left;
+  padding-left: 230px;
+  padding-right: 230px;
+}
 
-  #big-description{
-    font-family: "AvenirLTStd-Book";
-    font-size: 21px;
-    text-align: left;
-    padding-left: 230px;
-    padding-right: 230px;
-  }
+blockquote {
+  font-family: Georgia, serif;
+  font-size: 24px;
+  margin: 0.5em 10px;
+  padding: 0 10px;
+  quotes: "\201C";
+  padding: 10px 20px;
+  line-height: 1.4;
+  text-align: center;
+}
 
-  blockquote{
-    font-family: Georgia, serif;
-    text-align: center;
-    font-size: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
-    padding-bottom: 40px;
-    color: #79158f;
-  }
-  
-  blockquote::before{
-    content: "\201C";
-    position: absolute;
-  }
+blockquote:before {
+  content: open-quote;
+  display: inline;
+  line-height: 0;
+  left: -10px;
+  position: relative;
+  top: 30px;
+  color: #79158f;
+  font-size: 2em;
+}
 
-  #message {
-    font-size: 27px;
-    font-family: "AvenirLTStd-Book";
-    color: #79158f;
-    text-align: center;
-    
-  }
+#message {
+  font-size: 27px;
+  font-family: "AvenirLTStd-Book";
+  color: #79158f;
+  text-align: center;
+}
