> FINISHED: Search Page (Only needs the search form bg photo) > FINISHED: Home Page > About page fixed
Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/aboutpage-components/ClientSection.css
+++ b/src/components/aboutpage-components/ClientSection.css
@@ -46,7 +46,7 @@ blockquote:before {
   font-size: 2em;
 }
 
-#message {
+#clientMessage {
   font-size: 27px;
   font-family: "AvenirLTStd-Book";
   color: #79158f;
