> REFACTORED: Message of The Day now requires message prop (For Reuse [For Practitioner and Homepage]) > NEW COMPONENT: FeaturesList
Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/aboutpage-components/TopContent.css
+++ b/src/components/aboutpage-components/TopContent.css
@@ -11,12 +11,12 @@
 }
 
 .about-paragraph {
-  color: black;
   text-align: center;
   font-size: 22px;
   margin-left: 15%;
   margin-right: 15%;
   font-family: "AvenirLTStd-Book";
+  color: #5B5B5B; 
 }
 
 .aboutContainer {
