--- a/src/components/homepage-components/MessageOfTheDay.css
+++ b/src/components/homepage-components/MessageOfTheDay.css
@@ -4,6 +4,7 @@
   padding-bottom: 100px;
   margin: 0;
   color: #79158F;
-  font-size: 1.5vw;
+  font-size: 1.4vw;
+  font-weight: 500;
   font-family: "AvenirLTStd-Book";
 }
