> FINISHED: For Practitioners Page > ASSETS ADDED: we_are_us_screen 1-3 > COMPONENTS FINISHED: FeatureCarousel, FeatureItem, FeaturesList, PractitionerCTA > REFACTORED: Page Header can now be used with and without the learn more buttons > CHANGED: 	- Homepage and For Practitioners Page's Page Headers 	- Show All from practitioner list works with react router now 	- React Routing (Redirects path "/" to the "home" path) 	- Minor changes to alt on about page components (To Removes Warnings) 	- Added Navigation Bar Effects
Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/for-practitioner-components/FeaturesList.css
+++ b/src/components/for-practitioner-components/FeaturesList.css
@@ -1,25 +1,7 @@
-.featuresListStyle span {
-  display: block;
-  text-align: center;
+.featuresListStyle  {
+  padding-bottom: 50px;
 }
 
-.featuresListStyle img {
-  height: 250px;
-  width: 250px;
-}
-
-.featuresListStyle h5 {
-  font-family: "AvenirLTPro-Heavy";
-  color: #79158f;
-  text-align: center;
-  margin: 40px;
-}
-
-.featuresListStyle p {
-  font-family: "AvenirLTStd-Book";
-  color: #5b5b5b;
-  text-align: justify;
-}
 
 .featuresListStyle hr {
   border: none;
