> FINISHED: Register Page (ChooseRegister Component) > REFACTORED: Primary Button Style on index.css (Effects and All) > CHANGES: 	> Removed Duplicate Images 	> Added check_circle and check_circle_filled svg icons from bootstrap 	> Fixed some padding issues in About Page
Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/general-components/NavigationBar.css
+++ b/src/components/general-components/NavigationBar.css
@@ -2,6 +2,9 @@
   padding: 1% 15% 1% 15%;
   font-family: "AvenirLTPro-Heavy";
   background-color: white;
+  outline: solid;
+  outline-color: gray;
+  outline-width: thin;
 }
 
 .navBar-links .nav-link {
@@ -37,7 +40,7 @@
 .navBar-links .navBarEffect:hover:after {
   width: 100%;
   left: 0;
-}
+} 
 
 @media screen and (min-width: 992px) {
   .navBar-links .nav-link {
