--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,39 @@ body {
   padding: 0;
   overflow-x: hidden;
 }
+
+button:focus {
+  outline: none;
+}
+
+.primaryCustomButtonStyle {
+  font-family: "AvenirLTPro-Heavy";
+  background-color: #79158f;
+  border-color: rgba(0, 0, 0, 0);
+  font-weight: 400;
+}
+
+.primaryCustomButtonStyle:hover {
+  background-color: lavender;
+  color: #79158f;
+  border-color: #79158f;
+}
+
+.primaryCustomButtonStyle:focus {
+  color: lavender;
+  background-color: #b823dad3;
+  outline: none !important;
+  box-shadow: none;
+}
+
+.primaryCustomButtonStyle:active {
+  color: lavender;
+  background-color: #79158f !important;
+  outline: none !important;
+  box-shadow: none;
+}
+
+
+.siteDefaultMargin {
+  margin: 0.5% 15% 0.5% 15%;
+}
