--- a/src/components/general-components/NavigationBar.css
+++ b/src/components/general-components/NavigationBar.css
@@ -29,18 +29,21 @@
 .navBar-links .navBarEffect:after {
   bottom: 0;
   content: "";
-  height: 2px;
+  height: 1px;
   left: 50%;
   position: absolute;
-  background: #79158f;
-  transition: width 0.5s ease 0s, left 0.5s ease 0s;
+  background: #b823dad3;
   width: 0;
+  transition: width 0.6s ease 0s, left 0.6s ease 0s, height 0.5s,
+    background-color 0.6s linear;
 }
 
 .navBar-links .navBarEffect:hover:after {
+  background-color: #79158f;
   width: 100%;
+  height: 2px;
   left: 0;
-} 
+}
 
 @media screen and (min-width: 992px) {
   .navBar-links .nav-link {
