> MAJOR CHANGES: 	- Added REACT-ROUTER transitions (Fade in and out) 	- Added Footer Animations 	- Installed framer-motion for react-router animations 	- Added framer-motion animations 	- Fixed some Issues regarding the Console and Routing
> MINOR CHANGES:
	- Added better styling to Footer
	- Enhanced animations

Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/general-components/NavigationBar.css
+++ b/src/components/general-components/NavigationBar.css
@@ -32,9 +32,9 @@
   height: 1px;
   left: 50%;
   position: absolute;
-  background: #b823dad3;
+  background-color: #b823dad3;
   width: 0;
-  transition: width 0.6s ease 0s, left 0.6s ease 0s, height 0.5s,
+  transition: width 0.6s ease 0s, left 0.6s ease 0s, height 0.6s,
     background-color 0.6s linear;
 }
 
