> MAJOR CHANGES: 	- Therapy List Refactored so it can now take plenty of data 	- Finished missing things in MissingForm and PractitionerRegister components 	- Profile Setup Started
Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/general-components/Footer.css
+++ b/src/components/general-components/Footer.css
@@ -2,6 +2,8 @@
   font-family: "AvenirLTStd-Book";
   font-size: 1em;
   color: #5b5b5b;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .iconStyles {
