--- a/src/components/general-components/NavigationBar.css
+++ b/src/components/general-components/NavigationBar.css
@@ -1,5 +1,5 @@
 .navBar {
-  padding: 1% 15% 1% 15%;
+  padding: 20px 15% 20px 15%;
   font-family: "AvenirLTPro-Heavy";
   background-color: white;
   outline: solid;
