--- a/src/components/aboutpage-components/ClientSection.css
+++ b/src/components/aboutpage-components/ClientSection.css
@@ -1,3 +1,8 @@
+.aboutFluidContainer {
+  width: 1300px;
+  padding-top: 60px;
+}
+
 #lightHeader {
   font-family: "AvenirLTStd-Book";
   color: #79158f;
@@ -22,7 +27,7 @@
   text-align: left;
   padding-left: 230px;
   padding-right: 230px;
-  color: #5B5B5B; 
+  color: #5b5b5b;
 }
 
 blockquote {
