--- a/src/components/search-components/SearchField.css
+++ b/src/components/search-components/SearchField.css
@@ -1,6 +1,14 @@
 .searchFieldContainer {
   background-color: lavender;
+  /* background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)),
+    url("../../assets/images/placeholders/listing_placeholder_3.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+  */
 }
+
 .searchFieldStyle {
   font-family: "AvenirLTStd-Book";
   font-size: 1em;
@@ -57,6 +65,21 @@
 .searchFieldStyle .dropdown-toggle img {
   float: right;
   margin: 7px;
+}
+
+.searchFieldStyle .dropdown .dropdown-menu {
+  transition: all 0.5s;
+  max-height: 0;
+  width: 100%;
+  display: block;
+  overflow: hidden;
+  opacity: 0;
+}
+
+.searchFieldStyle .dropdown.show .dropdown-menu {
+  /* For Bootstrap 4, use .dropdown.show instead of .dropdown.open */
+  max-height: 500px;
+  opacity: 1;
 }
 
 .searchFieldStyle .dropdown-menu.show {
