--- a/src/components/practitionerprofile-components/ProfileInformation.css
+++ b/src/components/practitionerprofile-components/ProfileInformation.css
@@ -79,6 +79,7 @@
   color: #5b5b5b;
   padding-top: 8px;
   padding-bottom: 8px;
+  margin-left: 0px;
 }
 
 .service-list-style {
@@ -101,9 +102,9 @@
   width: 192px;
 }
 
-.arrow-style {
+.arrow-position {
   float: right;
-  font-size: 25px;
+  padding-top: 10px;
 }
 
 .practitioner-title {
@@ -124,4 +125,8 @@
   margin-top: 30px;
   margin-bottom: 30px;
   font-family: "AvenirLTPro-Heavy";
+}
+
+.read-more-arrow{
+  height: 8px;
 }
