--- a/src/components/search-components/TherapyList.css
+++ b/src/components/search-components/TherapyList.css
@@ -1,6 +1,8 @@
 .therapyListStyle {
   margin-top: 3%;
   margin-bottom: 3%;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .therapyListStyle h4 {
