--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,6 @@ body {
   overflow-x: hidden;
 }
 
-button:focus {
-  outline: none;
-}
-
 hr {
   border: none;
   height: 1px;
@@ -31,10 +27,23 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+/* General Form Styles */
 .form-control:focus {
   border-color: #b823dad3;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
     0 0 8px rgba(121, 21, 143, 0.6);
+  color: #79158f;
+}
+
+.form-control {
+  color: #79158f;
+  font-family: "AvenirLTStd-Book";
+}
+/* End of General Form Styles */
+
+/* General Button Styles */
+button:focus {
+  outline: none;
 }
 
 .primaryCustomButtonStyle {
@@ -63,6 +72,7 @@ input[type="number"] {
   outline: none !important;
   box-shadow: none;
 }
+/* End of General Button Styles */
 
 .siteDefaultMargin {
   margin: 0.5% 15% 0.5% 15%;
