> FINISHED: Profile Setup Page > MAJOR CHANGES: 	- Installed React-Redux 	- Therapy List Refactored to take in plenty of Services 	- Transitions refactored into a single file > MINOR CHANGES: 	- Fix CSS carousel conflicts for practitioner-profile and for-practitioners
Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/search-components/SearchField.css
+++ b/src/components/search-components/SearchField.css
@@ -27,6 +27,7 @@
 .searchFieldStyle .form-control {
   padding-top: 24px;
   padding-bottom: 24px;
+  background-color: white;
 }
 
 .searchFieldStyle .dropdown-toggle {
