--- a/src/components/practitionerprofile-components/ImageCarousel.css
+++ b/src/components/practitionerprofile-components/ImageCarousel.css
@@ -1,11 +1,11 @@
-.carousel {
+.profileCarousel .carousel {
   /* Adjust the Carousel dimensions and positioning */
   width: 1440px;
   height: 550px;
   margin: 0 auto;
 }
 
-.carousel-item > img {
+.profileCarousel .carousel-item > img {
   width: 1440px;
   max-height: 499px;
   object-fit: cover;
@@ -13,10 +13,10 @@
   display: inline-block !important;
 }
 
-.carousel-inner > .item > img {
+.profileCarousel .carousel-inner > .item > img {
   margin: 0 auto;
 }
 
-.carousel-img-margin{
+.profileCarousel .carousel-img-margin{
     margin-top: 80px !important;
 }
