--- a/src/index.css
+++ b/src/index.css
@@ -27,18 +27,31 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+input[type="checkbox"]:checked + label {
+  cursor: pointer;
+ color: #79158f;
+}
+
+.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+  background-color: #333;
+  border-color: #333;
+}
+
 /* General Form Styles */
 .form-control:focus {
   border-color: #b823dad3;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
     0 0 8px rgba(121, 21, 143, 0.6);
   color: #79158f;
+  background-color: #f3f1f3;
 }
 
 .form-control {
   color: #79158f;
   font-family: "AvenirLTStd-Book";
+  background-color: #f3f1f3;
 }
+
 /* End of General Form Styles */
 
 /* General Button Styles */
