--- a/src/components/general-components/NavigationBar.css
+++ b/src/components/general-components/NavigationBar.css
@@ -1,20 +1,52 @@
 .navBar {
-  margin: 0.5% 15% 0.5% 15%;
+  padding: 20px 15% 20px 15%;
   font-family: "AvenirLTPro-Heavy";
+  background-color: white;
+  outline: solid;
+  outline-color: gray;
+  outline-width: thin;
 }
 
-.nav-link {
+.navBar-links .nav-link {
   display: flex;
+  position: relative;
   color: #79158f !important;
   /* color: white !important; */
-  font-weight: 500;
   justify-content: center;
   align-items: center;
+  font-weight: 500;
   font-size: 1em;
 }
 
+.navBar-links a.nav-link:hover {
+  color: #b823dad3 !important;
+}
+
+.navBar-links a.nav-link:active {
+  color: #79158f !important;
+}
+
+.navBar-links .navBarEffect:after {
+  bottom: 0;
+  content: "";
+  height: 1px;
+  left: 50%;
+  position: absolute;
+  background-color: #b823dad3;
+  width: 0;
+  transition: width 0.6s ease 0s, left 0.6s ease 0s, height 0.6s,
+    background-color 0.6s linear;
+}
+
+.navBar-links .navBarEffect:hover:after {
+  background-color: #79158f;
+  width: 100%;
+  height: 2px;
+  left: 0;
+}
+
 @media screen and (min-width: 992px) {
-  .nav-link {
+  .navBar-links .nav-link {
     margin-left: 16px !important;
   }
   .highlightNav {
