--- a/src/components/homepage-components/MessageOfTheDay.css
+++ b/src/components/homepage-components/MessageOfTheDay.css
@@ -1,7 +1,10 @@
 .motdStyle {
-    text-align: center;
-    padding-top: 50px;
-    color: #79158f;
-    font-size: 1.7em;
-    font-family: "AvenirLTStd-Book";
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  margin: 0;
+  color: #79158F;
+  font-size: 1.4vw;
+  font-weight: 500;
+  font-family: "AvenirLTStd-Book";
 }
