--- a/src/components/register-login-components/LoginForm.css
+++ b/src/components/register-login-components/LoginForm.css
@@ -38,6 +38,11 @@
 
 #forgetPassword {
   float: right;
+  cursor: pointer;
+}
+
+#forgetPassword:hover {
+  color: #b823dad3;
 }
 
 #loginFormButton {
