--- a/src/components/general-components/NavigationBar.css
+++ b/src/components/general-components/NavigationBar.css
@@ -26,7 +26,7 @@
   color: #79158f !important;
 }
 
-.navBar-links .navBarEffect:after {
+.navBarEffect:after {
   bottom: 0;
   content: "";
   height: 1px;
@@ -38,7 +38,7 @@
     background-color 0.6s linear;
 }
 
-.navBar-links .navBarEffect:hover:after {
+.navBarEffect:hover:after {
   background-color: #79158f;
   width: 100%;
   height: 2px;
