--- a/src/components/practitionerprofile-components/ImageCarousel.css
+++ b/src/components/practitionerprofile-components/ImageCarousel.css
@@ -6,7 +6,7 @@
 }
 
 .carousel-item > img {
-  width: 1440px;
+  width: 100%;
   max-height: 499px;
   object-fit: cover;
   z-index: 1;
@@ -19,4 +19,11 @@
 
 .carousel-img-margin{
     margin-top: 80px !important;
+}
+
+@media (max-width: 1280px) {
+  .carousel {
+    width: auto;
+    height: auto;
+  }
 }
