--- a/src/components/practitionerprofile-components/ProfileInformation.css
+++ b/src/components/practitionerprofile-components/ProfileInformation.css
@@ -9,6 +9,14 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+@media (max-width: 900px) {
+  #profile-image-frame {
+    display: block;
+    margin: 0 auto;
+    margin-top: 190px;
+  }
+}
+
 .container-dimensions {
   padding-left: 19%;
   padding-right: 17%;
@@ -63,6 +71,12 @@
   margin-top: -35px;
 }
 
+@media (max-width: 900px) {
+  .practitioner-logo {
+    display: none;
+  }
+}
+
 .no-padding {
   margin-right: 0 !important;
   padding-right: 0 !important;
@@ -72,6 +86,31 @@
   font-size: 19px;
   font-family: "AvenirLTStd-Book";
   color: #5b5b5b;
+}
+
+#category-text {
+  color: #79158f;
+  font-size: 19px;
+  font-family: "AvenirLTStd-Book";
+}
+
+#suburb,
+#city {
+  font-size: 19px;
+  font-family: "AvenirLTStd-Book";
+  color: #5b5b5b;
+}
+#location,
+#category {
+  text-align: left;
+}
+
+@media (max-width: 600px) {
+  #category,
+  #practitioner-name,
+  #location {
+    text-align: center;
+  }
 }
 
 .title-header {
@@ -96,10 +135,17 @@
   background-color: #f2e9f4;
   color: #79158f;
   font-family: "AvenirLTStd-Book";
+  font-size: 19px;
   padding-top: 7px;
   padding-bottom: 7px;
   text-align: center;
   width: 192px;
+}
+
+@media (max-width: 900px) {
+  .box {
+    display: none;
+  }
 }
 
 .arrow-position {
@@ -113,11 +159,23 @@
   font-family: "AvenirLTPro-Heavy";
 }
 
+@media (max-width: 900px) {
+  .practitioner-title {
+    text-align: center;
+  }
+}
+
 .practitioner-name {
   color: #79158f;
   font-family: "AvenirLTPro-Heavy";
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+@media (max-width: 900px){
+  .practitioner-name{
+    text-align: center;
+  }
 }
 
 .read-more-button {
@@ -127,6 +185,12 @@
   font-family: "AvenirLTPro-Heavy";
 }
 
-.read-more-arrow{
+.read-more-arrow {
   height: 8px;
+}
+
+#container.one-column {
+  display: flex;
+  flex-direction: column;
+  height: auto;
 }
