--- a/src/components/homepage-components/CallToAction.css
+++ b/src/components/homepage-components/CallToAction.css
@@ -1,15 +1,15 @@
 .ctaStyle {
-  background-image: linear-gradient(
-    rgba(211, 173, 194, 1),
-    rgba(211, 173, 194, 1)
-  );
   text-align: center;
   position: relative;
   font-family: "AvenirLTStd-Book";
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+
 }
 
 .ctaStyle img {
-  width: 77%;
+  width: 100%;
   height: auto;
 }
 
