First draft for mobile home page and adding logic to check for screen size on a few components. TODO: Finish mobile nav-bar

--- a/src/components/general-components/NavigationBar.css
+++ b/src/components/general-components/NavigationBar.css
@@ -1,8 +1,71 @@
+/* DESKTOP STYLES */
 .navBar {
   padding: 1% 15% 1% 15%;
   font-family: "AvenirLTPro-Heavy";
   background-color: white;
 }
+
+.navBar-links .nav-link {
+  display: flex;
+  position: relative;
+  color: #79158f !important;
+  /* color: white !important; */
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  font-size: 1em;
+}
+
+.navBar-links a.nav-link:hover {
+  color: #b823dad3 !important;
+}
+
+.navBar-links a.nav-link:active {
+  color: #79158f !important;
+}
+
+.navBar-links .navBarEffect:after {
+  bottom: 0;
+  content: "";
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #79158f;
+  transition: width 0.5s ease 0s, left 0.5s ease 0s;
+  width: 0;
+}
+
+.navBar-links .navBarEffect:hover:after {
+  width: 100%;
+  left: 0;
+}
+
+@media screen and (min-width: 992px) {
+  .navBar-links .nav-link {
+    margin-left: 16px !important;
+  }
+  .highlightNav {
+    border: 2px solid #79158f;
+    /* border: 2px solid white; */
+    padding: 10px 40px 10px 40px !important;
+  }
+  .highlightNav:hover {
+    font-size: 1.1em;
+    transition: font-size 0.4s;
+  }
+}
+
+
+/* MOBILE STYLES */
+.navBarMobile {
+  padding: 5% 10% 5% 10%;
+  font-family: "AvenirLTPro-Heavy";
+}
+
+#mobile_logo {
+  height: 5vh;
+}
+
 
 .navBar-links .nav-link {
   display: flex;
