--- a/src/components/homepage-components/CallToAction.css
+++ b/src/components/homepage-components/CallToAction.css
@@ -44,22 +44,21 @@
   padding-top: 100px;
   padding-bottom: 100px;
   margin: 0;
-  color: #79158f;
+  color: #79158F;
   font-size: 1.3em;
   font-family: "AvenirLTPro-Heavy";
 }
 
-#ctaSignUpForm {
+#ctaSearchForm {
   margin-top: 85px;
   padding-top: 30px;
   padding-bottom: 30px;
   padding-left: 40px;
   font-weight: 100;
   font-family: "AvenirLTStd-Book";
-  background-color: white;
 }
 
-#ctaSignUpFormSubmit {
+#ctaSearchFormSubmit {
   margin-top: 85px;
   background-color: rgb(255, 255, 255);
   border-top: 1px solid #ced4da;
@@ -68,7 +67,7 @@
   padding: 0px 30px 0px 30px;
 }
 
-#ctaSignUpFormSubmit:hover {
-  border: 1px solid #79158f;
+#ctaSearchFormSubmit:hover {
+  border: 1px solid #79158F;
   background-color: lavender;
 }
