--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ body {
   overflow-x: hidden;
 }
 
+button:focus {
+  outline: none;
+}
+
 hr {
   border: none;
   height: 1px;
@@ -27,31 +31,38 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
-input[type="checkbox"]:checked + label {
-  cursor: pointer;
-}
-
-.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #333;
-  border-color: #333;
-}
-
-/* General Form Styles */
 .form-control:focus {
   border-color: #b823dad3;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
     0 0 8px rgba(121, 21, 143, 0.6);
-  color: #79158f;
-  background-color: #f3f1f3;
 }
 
-.form-control {
-  color: #79158f;
-  font-family: "AvenirLTStd-Book";
-  background-color: #f3f1f3;
+.primaryCustomButtonStyle {
+  font-family: "AvenirLTPro-Heavy";
+  background-color: #79158f;
+  border-color: rgba(0, 0, 0, 0);
+  font-weight: 400;
 }
 
-/* End of General Form Styles */
+.primaryCustomButtonStyle:hover {
+  background-color: lavender;
+  color: #79158f;
+  border-color: #79158f;
+}
+
+.primaryCustomButtonStyle:focus {
+  color: lavender;
+  background-color: #b823dad3;
+  outline: none !important;
+  box-shadow: none;
+}
+
+.primaryCustomButtonStyle:active {
+  color: lavender;
+  background-color: #79158f !important;
+  outline: none !important;
+  box-shadow: none;
+}
 
 .siteDefaultMargin {
   margin: 0.5% 15% 0.5% 15%;
