--- a/src/components/practitionerprofile-components/ImageCarousel.css
+++ b/src/components/practitionerprofile-components/ImageCarousel.css
@@ -17,16 +17,13 @@
   margin: 0 auto;
 }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
+
 .profileCarousel .carousel-img-margin {
   margin-top: 80px !important;
-=======
-=======
->>>>>>> parent of c592f96... Merge branch 'develop' into practitioner-profile
+}
+
 .carousel-img-margin{
     margin-top: 80px !important;
->>>>>>> parent of c592f96... Merge branch 'develop' into practitioner-profile
 }
 
 @media (max-width: 1280px) {
