Added temporary navbar scroll logic. TODO: add continuous scroll checker & style change for desktop & mobile navbar

--- a/src/components/general-components/Footer.css
+++ b/src/components/general-components/Footer.css
@@ -1,3 +1,4 @@
+/* Deskotp Styles */
 .footerStyle {
   margin: 0.5% 15% 0.5% 15%;
   font-family: "AvenirLTPro-Heavy";
@@ -6,11 +7,33 @@
 
 .iconStyles {
     float: right;
-  
+
 }
 
 @media screen and (min-width: 992px) {
     .footerStyle .nav-link  {
       margin-left: 16px !important;
     }
+}
+
+
+/* Mobile Styles */
+
+.footerStyleMobile {
+  font-family: "AvenirLTPro-Heavy";
+  font-size: 2vh;
+}
+
+.justify-content-center{
+  display: flex;
+  justify-content: center;
+  padding-top: 3%;
+}
+
+.footerStyleMobile {
+  text-align: center;
+}
+
+.footerSocialMedia {
+  margin-bottom: 5%;
 }
