--- a/src/components/homepage-components/PageHeader.css
+++ b/src/components/homepage-components/PageHeader.css
@@ -66,7 +66,7 @@
   width: 100%;
   height: auto;
   padding-top: 70%;
-  padding-bottom: 50%;
+  padding-bottom: 15%;
 }
 
 
@@ -103,4 +103,5 @@
   align-self: center;
   width: 5vh;
   height:auto;
+  padding-top: 50%;
 }
